add ViewModelFactory, impl GameFinishedFragment

--- a/app/src/main/res/layout/fragment_game_finished.xml
+++ b/app/src/main/res/layout/fragment_game_finished.xml
@@ -23,7 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:text="Необходимое количество правильных ответов: %s"
+        android:text="@string/tv_min_count_of_right_answers"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/tv_score_answers"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:text="Ваш счет: %s"
+        android:text="@string/tv_user_score"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/tv_required_percentage"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:text="Необходимый процент правильных ответов: %s"
+        android:text="@string/tv_min_percentage"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/tv_score_percentage"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +63,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:text="Ваш процент: %s"
+        android:text="@string/tv_user_percentage"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@id/button_retry"
         app:layout_constraintEnd_toEndOf="parent"
